# agentic-brain

./: .env.example  .gitignore  .mise.toml  Dockerfile  README.md  codecov.yml  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml
interfaces/homeassistant/: README.md
interfaces/homeassistant/custom_components/brain_interface/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json  translations.py
interfaces/homeassistant/custom_components/brain_interface/translations/: pl.json
interfaces/telegram/: .env.example  README.md  __main__.py  bot.py  config.py
interfaces/web-ui/: .env.production  Dockerfile  nginx.conf  package-lock.json  package.json
interfaces/web-ui/src/: app.css
interfaces/web-ui/src/lib/api/: brain.ts
interfaces/web-ui/src/lib/components/: ChatInput.svelte  ChatWindow.svelte  MessageBubble.svelte
interfaces/web-ui/src/lib/stores/: chat.ts  session.ts
interfaces/web-ui/src/routes/: +page.svelte
src/: agent.py  config.py  health.py  logging_config.py  main.py  mcp_client.py  metrics.py  retry.py  state.py
tests/: conftest.py  test_agent.py  test_config.py  test_health.py  test_logging_config.py  test_main.py  test_mcp_client.py  test_metrics.py  test_retry.py  test_state.py  test_telegram_bot.py
